# study_practic_task

./: CMakeLists.txt
app/: CMakeLists.txt  app.cpp
include/lib_name/: lib_desc
src/: CMakeLists.txt
src/lib_name/: CMakeLists.txt
tests/: CMakeLists.txt
