#---------------------SET COMPONENT NAME---------------------------------------#
set(PROJECT application)
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SERVER ${PROJECT})
set(SERVER_SOURCE app.cpp)
#------------------------------------------------------------------------------#
#---------------------ADD DEFINITION-------------------------------------------#
#------------------------------------------------------------------------------#
#--------------------INCLUDE DIRS----------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD EXECUTE----------------------------------------------#
add_executable(${SERVER}
        ${SERVER_SOURCE})
#------------------------------------------------------------------------------#
#--------------------------CHECK STD-------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------LINK COMPONENTS------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------------SANITIZERS----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------------PVS STUDIO ANALYZE---------------------------------#
#---------------------INSTALL--------------------------------------------------#
#install(TARGETS ${PROJECT} DESTINATION bin)
#------------------------------------------------------------------------------#
