#---------------------SET COMPONENT NAME---------------------------------------#
set(TARGET_NAME test)
set(LINK_NAME testlibtest)
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
set(MODULE_NAME test_manager_test)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED on)
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
include(FetchContent)
include(FindProtobuf)
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SOURCE  )
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#---------------------ADD DEFINITIONS------------------------------------------#
#------------------------------------------------------------------------------#

add_executable(${TARGET_NAME} ${SOURCE})

target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
add_test(NAME ${LINK_NAME} COMMAND ${TARGET_NAME})

