#---------------------SET COMPONENT NAME---------------------------------------#
set(LIB_NAME my_lib_name)

message(${LIB_NAME})
message ( "     SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}" )
message ( "     BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}" )
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
set(CMAKE_CXX_STANDARD 20)
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
set(LIB_PATH ${PROJECT_SOURCE_DIR}/include/lib_name)
set(HEADER_LIST
        )
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------COMPILE DEFINES------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SOURCE  )
#------------------------------------------------------------------------------#
#---------------------ADD LIBRARY----------------------------------------------#
add_library(${LIB_NAME}
        ${SOURCE}
        ${HEADER_LIST})
#------------------------------------------------------------------------------#
#--------------------INCLUDE DIRS----------------------------------------------#
target_include_directories(${LIB_NAME} PUBLIC
        ${PROJECT_SOURCE_DIR}/include)
#---------------------LINK COMPONENTS------------------------------------------#
#------------------------------------------------------------------------------#
#--------------------------REQUIRED STD----------------------------------------#
target_compile_features(${LIB_NAME} PUBLIC cxx_std_20)
#------------------------------------------------------------------------------#
#-----------------------------CMAKE BUILD--------------------------------------#
source_group(TREE "${PROJECT_SOURCE_DIR}/include/businessLayer/manager"
        PREFIX "Header Files"
        FILES ${HEADERS})
#------------------------------------------------------------------------------#
#---------------------------PVS STUDIO ANALYZE---------------------------------#
#------------------------------------------------------------------------------#